refactor: removido DTOs não utilizados após serem autogerados e incluidos novos endpoints apos rebase
- excluídas classes DTO duplicadas em `infrastructure.api.rest.dto`
- adaptados mapeamentos em `UsuarioApiMapper` para utilizar modelos gerados
- ajustados endpoints em `UsuarioController` para trabalhar com modelos gerados
- atualizado arquivo OpenAPI para refletir inclusão de schemas e endpoints
