# src/main/java/com/twentysixcore/chefapi/infrastructure/api/rest/dto/EnderecoDTO.java
@@ -1,9 +1,0 @@
-package com.twentysixcore.chefapi.infrastructure.api.rest.dto;
-
-public record EnderecoDTO(
-        String rua,
-        String numero,
-        String cidade,
-        String cep,
-        String uf
-) {}
